day3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: dov-bear-ing 
  labels: 
    name: dov-bear-ing
spec:
  ingressClassName: dov-bear-ing
  # defaultBackend:
  #   service:
  #     name: dov-bear-svc
  #     default
  rules:
  # - host: xxx
  - http: 
      paths:
        - path: /
          pathType: Prefix
          backend: 
            service:
              name: dov-bear-svc
              port: 
                number: 8080
